# MetalLLM

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
examples/: bench_trace.json  benchmark.py  benchmark_baseline.py  benchmark_compare.py  benchmark_llama.py  benchmark_mistral.py  benchmark_qwen.py  benchmark_suite.py  run_basic.py  validate_parity.py
metal_llm/: __init__.py  api.py  attn_hooks.py  cli.py  cli_bench.py  exporter.py  memory.py  profiler.py  runtime.py  storage.py
metal_llm/hf_processors/: llama.py  mistral.py  qwen.py
metal_llm/kernels/: __init__.py  attention_metal.py  attention_mps.py
